added bird endpoints and controller functions, no functionality implemented
