# src/internal/docs/swagger.yaml
@@ -1,5 +1,37 @@
 basePath: /
 definitions:
+  models.Bird:
+    properties:
+      description:
+        type: string
+      id:
+        type: string
+      imageId:
+        type: string
+      name:
+        type: string
+      soundId:
+        type: string
+    type: object
+  models.Err:
+    properties:
+      description:
+        description: the error description for the developer, aka err.Error()
+        type: string
+      message:
+        description: the displayed error text for the user
+        type: string
+      name:
+        type: string
+      status:
+        type: integer
+    type: object
+  models.Response:
+    properties:
+      data: {}
+      timestamp:
+        type: string
+    type: object
   models.ResponseHTTP:
     properties:
       data: {}
@@ -21,7 +53,7 @@ definitions:
       username:
         type: string
     type: object
-host: localhost:4000
+host: 127.0.0.1:3000
 info:
   contact:
     email: ??
@@ -35,6 +67,201 @@ info:
   title: BirdAI API
   version: "2.0"
 paths:
+  /birds/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get bird by ID
+      parameters:
+      - description: Bird ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Bird'
+                  type: array
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+        "410":
+          description: Gone
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+        "503":
+          description: Service Unavailable
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+      summary: Get bird by ID
+      tags:
+      - birds
+    patch:
+      consumes:
+      - application/json
+      description: Update given bird
+      parameters:
+      - description: Bird ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: bird
+        in: body
+        name: bird
+        required: true
+        schema:
+          $ref: '#/definitions/models.Bird'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+        "403":
+          description: Forbidden
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+        "503":
+          description: Service Unavailable
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+      summary: Update given bird
+      tags:
+      - birds
+  /birds/list:
+    get:
+      consumes:
+      - application/json
+      description: List all birds of a specified set and seach parameters
+      parameters:
+      - description: Set of birds
+        in: query
+        name: set
+        type: integer
+      - description: Search parameter for birds
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Bird'
+                  type: array
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+        "503":
+          description: Service Unavailable
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Err'
+                  type: array
+              type: object
+      summary: List all birds of a specified set and seach parameters
+      tags:
+      - birds
   /users/:
     post:
       consumes:
