# src/internal/handlers/routes_handler.go
@@ -2,11 +2,12 @@ package handlers
 
 import (
 	"birdai/src/internal/repositories"
+	"os"
+
 	jwtware "github.com/gofiber/contrib/jwt"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/fiber/v2/middleware/logger"
-	"os"
 )
 
 func New(app *fiber.App, db repositories.IMongoInstance) {
@@ -31,4 +32,9 @@ func New(app *fiber.App, db repositories.IMongoInstance) {
 	usersRoute.Post("/", handler.Login)
 	usersRoute.Patch("/:id", handler.UpdateUser)
 	usersRoute.Delete("/:id", handler.DeleteUser)
+
+	birdsRoute := app.Group("/birds")
+	birdsRoute.Get("/list", handler.ListBirds)
+	birdsRoute.Get("/:id", handler.GetBirdById)
+	birdsRoute.Patch("/:id", handler.UpdateBird)
 }
