# src/internal/models/basic_models.go
@@ -9,3 +9,15 @@ type ResponseHTTP struct {
 	Data    interface{} `json:"data"`
 	Message string      `json:"message"`
 }
+
+type Response struct {
+	Timestamp string `json:"timestamp"`
+	Data interface{} `json:"data"`
+}
+
+type Err struct {
+	StatusCode int `json:"status"`
+	StatusName string `json:"name"`
+	Message string `json:"message"` //the displayed error text for the user
+	Description string `json:"description"` //the error description for the developer, aka err.Error()
+}
